<resources>
    <string name="app_name">Clever_coffe</string>
    <string name="welcome">Уважаемый гость, добро пожаловать в кофейню Clever</string>
    <string name="pic">pic</string>
    <string name="registration">Регистрация</string>
    <string name="glav_str">Главная страница</string>
    <string name="name">Имя</string>
    <string name="number">Номер телефона</string>
    <string name="dalee">Далее</string>
    <string name="sms">Подтверждение аккаунта по SMS</string>
    <string name="codee">4х значный код</string>
    <string name="poluchit">Получить код еще раз</string>
    <string name="espresso">Эспрессо</string>
    <string name="description">Во вкусе эспрессо гармонично сочетаются сладость, горечь и лёгкая кислинка. Оттенки вкуса зависят от сортов кофейных зёрен, входящих в состав смеси, степени обжарки и навыков баристы.</string>
    <string name="_90">90</string>
    <string name="penne_with">Пенне с соусом Песто</string>
    <string name="description2">Пенне с соусом Песто Паста с соусом пенне, соус Песто, вяленые черри</string>
    <string name="_340">340</string>
    <string name="soberite">Соберите 6 печатей, приобретая любой кофейный напиток, и 7-ой получите в подарок!🎁</string>
    <string name="priyatnost">Приятность, которую оценят все - подарочным может быть любой кофейный напиток, не только классика 😏, да ещё и в большом объёме, если ваша кофейная душа пожелае</string>
    <string name="kuhnya">Кухня</string>
    <string name="bar">Бар</string>
    <string name="ris">Рисовая каша</string>
    <string name="rice">Рис. молоко, сливки, сливочное масло, стружка грецкого ореха и фисташки.</string>
    <string name="ovsya">Овсяная каша</string>
    <string name="ovsya2">Овсяные хлопья, молоко, сливки, сухофрукты.</string>
    <string name="sirniki">Сырники Королевские</string>
    <string name="tvorog">Творог, яйцо, рисовая мука, сметанный соус, малиновый мусс.</string>
    <string name="benedikt">Яйцо Бенедикт</string>
    <string name="vafli">Вафельный тост, форель в свекольном маринаде, шпинат, яйцо-пашот, соус Бенедикт, микс-салат.</string>
    <string name="angzavtrak">Английский завтрак</string>
    <string name="yaico">Яйцо глазунья, говяжья колбаска, картофель, шампиньоны, фасоль в томатном соусе, листья салата, хлеб.</string>
    <string name="energy">Завтрак Энергия</string>
    <string name="skramble">Яичный скрэмбл, малосольный лосось, микс салат, творожный сыр, оливки, хлеб.</string>
    <string name="_330">330</string>
    <string name="_180">180</string>
    <string name="_220">220</string>
    <string name="_140">140</string>
    <string name="zavtraki">ЗАВТРАКИ</string>
    <string name="nurbolot">Привет, Nurbolot Я Клевер! Не желаешь ли выпить чашечку кофе?</string>
    <string name="bludo">Блюдо дня</string>
    <string name="penne">Пенне</string>
    <string name="krl">Крылышки</string>
    <string name="burri">Буритто</string>
    <string name="esspro">Эспрессо</string>
    <string name="amer">Американо</string>
    <string name="raf">Раф</string>
    <string name="top">Топ продаж</string>
    <string name="free">Бесплатно</string>
    <string name="akcii">Акции</string>
    <string name="qr_code">QR code</string>
    <string name="menu">Menu</string>
</resources>