<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZavtrakiActivity"
    android:background="@drawable/background4">

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/home" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zavtraki"
            android:textColor="@color/korichneviy"
            android:textSize="@dimen/size27" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/pic"
            android:src="@drawable/vpered" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/pic"
            android:src="@drawable/back" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size45"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ris"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rice" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size45"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ovsya"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ovsya2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size45"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sirniki"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvorog" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size45"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benedikt"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vafli" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size45"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angzavtrak"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaico" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size45"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energy"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skramble" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/size20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_140"
            android:textColor="@color/black"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size27"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout11"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15"
        android:layout_marginEnd="@dimen/size20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_180"
            android:textColor="@color/black"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout12"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16"
        android:layout_marginEnd="@dimen/size20"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_220"
            android:textColor="@color/black"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout13"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17"
        android:layout_marginEnd="@dimen/size20"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_180"
            android:textColor="@color/black"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout14"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18"
        android:layout_marginEnd="@dimen/size20"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_330"
            android:textColor="@color/black"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout19"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout20"
        android:layout_marginEnd="@dimen/size20"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_330"
            android:textColor="@color/black"
            android:textSize="@dimen/size20"
            android:textStyle="bold" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>