<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:background="@drawable/rectangle_korich"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nurbolot"
            android:textColor="@color/white"
            android:textSize="@dimen/size27" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="@dimen/size20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bludo"
            android:textColor="@color/black"
            android:textSize="@dimen/size16"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout23"
        android:layout_marginTop="@dimen/size20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akcii"
            android:textColor="@color/black"
            android:textSize="@dimen/size16"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dlya_blud"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout22">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/penne" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penne"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="58dp"
        android:background="@drawable/dlya_blud"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/linearLayout23"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/espresso" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espresso"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:background="@drawable/dlya_blud"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout30"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout25">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/qrr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_code"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:background="@drawable/dlya_blud"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout23">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/podarok" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dlya_blud"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout27"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout24"
        android:layout_marginStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/dlya_blud"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout24"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout21">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/buritto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burri"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>