<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/svetliy">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/size25"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pic"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="120dp">

        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/bejeviy"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textSize="@dimen/size16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/korichneviy"
            android:text="@string/glav_str"
            android:textAllCaps="false"
            android:textSize="@dimen/size16" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>